--- a/bip39/index.html
+++ b/bip39/index.html
@@ -224,6 +224,15 @@
                                         </p>
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Block Explorers</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control no-border">
+                                        Use path <code>m/44'/0'/0'</code>.
+                                        Only enter the <code>xpub</code> extended key into block explorer search fields, never the <code>xpriv</code> key.
+                                        </p>
+                                    </div>
+                                </div>
                             </form>
                         </div>
                     </div>
