Change to iancoleman from dcpos

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -11,7 +11,7 @@
         <meta content="Mnemonic code for generating deterministic keys" name="description"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="bitcoin mnemonic converter" name="description" />
-        <meta content="DC POS" name="author" />
+        <meta content="Ian Coleman" name="author" />
 
         <style>
             body {
@@ -353,8 +353,8 @@
                     </p>
                     <p>
                     Alternatively, download it from
-                    <a href="https://github.com/dcpos/bip39">
-                        https://github.com/dcpos/bip39
+                    <a href="https://github.com/iancoleman/bip39">
+                        https://github.com/iancoleman/bip39
                     </a>
 
                 </div>
@@ -369,8 +369,8 @@
 
                     <p>
                         <span>Get the source code at - </span>
-                        <a href="https://github.com/dcpos/bip39" target="_blank">
-                            https://github.com/dcpos/bip39
+                        <a href="https://github.com/iancoleman/bip39" target="_blank">
+                            https://github.com/iancoleman/bip39
                         </a>
                     </p>
 
