--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                         <a href="/bip39/">Site</a>
                     </li>
                     <li>
-                        <a href="https://github.com/dcpos/bip39">Source code</a>
+                        <a href="https://github.com/iancoleman/bip39">Source code</a>
                     </li>
                 </ul>
             </li>
