base.css makes non-bootstrap pages look decent.
From http://bettermotherfuckingwebsite.com/

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Index - iancoleman</title>
+        <link rel="stylesheet" href="/base.css">
+    </head>
     <body>
         <ul>
             <li>
