Title on home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/base.css">
     </head>
     <body>
+        <h1 style="text-align:center">Ian Coleman</h1>
         <ul>
             <li>
                 <p>BIP39 Mnemonic Code Converter</p>
