--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <p>Quotes</p>
+                <ul>
+                    <li>
+                        <a href="/quotes/#philosophers">Philosophers</a>
+                    </li>
+                    <li>
+                        <a href="/quotes/#programmers">Programmers</a>
+                    </li>
+                    <li>
+                        <a href="/quotes/#authors">Authors</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
